src/resources/postcss/tribe-common-admin.pcss
/* ... */
.tribe-events-admin__recent-log-filters-select-wrapper #tribe-log-controls {
	padding: 0;
	margin-bottom: 20px;
}

.tribe-events-admin__recent-log-filters-select-wrapper #tribe-log-controls div:nth-child(1),
.tribe-events-admin__recent-log-filters-select-wrapper #tribe-log-controls div:nth-child(2),
.tribe-events-admin__recent-log-filters-select-wrapper #tribe-log-controls div:nth-child(3) {
	/* adds a margin between the dropdowns */
	padding-right: 75px;

	@media only screen and (max-width: 768px)  {
		padding-right: 30px;
	}
}

.tribe-events-admin__recent-log-filters-select-wrapper .select2-selection__clear {
	display: none;
}

.tribe-events-admin__recent-log-filters-select-wrapper .select2-container--default .select2-selection--single .select2-selection__arrow {
	right: 5px;
}

.tribe-events-admin__recent-log-filters-select-wrapper .select2-container--default.select2-container--open.select2-container--below .select2-selection--single, .select2-container--default.select2-container--open.select2-container--below .select2-selection--multiple {
	border-bottom-left-radius: 16px;
	border-bottom-right-radius: 16px;
}


.tribe-events-admin__recent-log-filters-select-wrapper .select2-container .select2-selection--single .select2-selection__rendered {
	width: 100%;
}

.tribe-events-admin__recent-log-filters-select-wrapper select:focus-visivble {
	outline: none;
}

.tribe-events-admin__recent-log-filters-select-wrapper select option {
	font-size: 14px;
	line-height: 1.14;
	color: #0f1031;
}

.tribe-events-admin__ea-status {
	margin-top: 50px;
}

/* issues found section */
.tribe-events-admin__issues-found-card {
	background-color: #f3eee8;
  	border-radius: 8px;
	margin-bottom: 20px;
}

.tribe-events-admin__issues-found-card:last-of-type {
	margin-bottom: 100px;
}

.tribe-events-admin__issues-found-card-title {
	position: relative;
	display: flex;
	align-items: center;
	padding: 10px 20px 10px 17px;
	cursor: pointer;
}

.tribe-events-admin__issues-found-card-title img {
	width: 21px;
	height: 21px;
	object-fit: contain;
	margin-right: 14px;
}

.tribe-events-admin__issues-found-card-title h3 {
	margin: 0;

	@media only screen and (max-width: 768px)  {
		max-width: 90%;
	}

	@media only screen and (max-width: 480px)  {
		max-width: 80%;
	}
}

.tribe-events-admin__issues-found-card-title span {
	color: #0f1031;
	display: block;
}

.tribe-events-admin__issues-found-card-title i {
	position: absolute;
	background-image: url("../images/help/arrow-down.svg");
	background-repeat: no-repeat;
	background-position: center;
	background-size: contain;
	width: 15px;
	height: 15px;
	-webkit-transition: all 0.3s ease;
	-moz-transition: all 0.3s ease;
	-o-transition: all 0.3s ease;
	-ms-transition: all 0.3s ease;
	transition: all 0.3s ease;
	margin: 12px 20px;
	right: 0;
	top: 0;
}

.tribe-events-admin__issues-found-card-title.active i {
	background-image: url("../images/help/arrow-up.svg");
	background-repeat: no-repeat;
	top: 5px;
}

.tribe-events-admin__issues-found-card-description {
	padding: 0 20px 20px 55px;
	display: none;
}

.tribe-events-admin__issues-found-card-description p {
	font-size: 16px;
	color: #0f1031;
	margin: 0;
}

.tribe-events-admin__issues-found-card-description-actions {
	display: flex;
	padding: 20px 0 10px;
}

.tribe-events-admin__issues-found-card-description-actions a {
	font-size: 16px;
	text-decoration: none;
	color: #334aff;
	margin-right: 20px;
	padding-bottom: 5px;
	border-bottom: 2px solid #334aff;

	&:focus {
		box-shadow: none;
		outline: none;
	}

	&:hover {
		color: #1c39bb;
		border-bottom: 2px solid #1c39bb;
	}
}

.tribe-events-admin__ea-status-table {
	border-radius: 16px;
	border: 1px solid #e1e1e4;
	margin: 30px 0 40px;
	width: 100%;
	padding: 20px 0;
	overflow: hidden;
}

.tribe-events-admin__ea-status-table a {
	text-decoration: none;
	color: #334aff;
	padding-bottom: 2px;
	border-bottom: 2px solid #334aff;

	&:focus {
		box-shadow: none;
		outline: none;
	}

	&:hover {
		color: #1c39bb;
		border-bottom: 2px solid #1c39bb;
	}
}

.tribe-events-admin__ea-status-table tr {
	display: flex;
	align-items: center;

	@media only screen and (max-width: 480px)  {
		flex-direction: column;
		align-items: flex-start;
	}
}

.tribe-events-admin__ea-status-table th {
	font-weight: bold;
	line-height: 1.17;
	color: #0f1031;
	padding: 5px 25px;
	margin-top: 10px;
}

.tribe-events-admin__ea-status-table td {
	font-size: 16px;
	line-height: 1.63;
	color: #0f1031;
	padding: 10px 25px;
	display: flex;
	align-items: center;
	width: 25%;

	@media only screen and (max-width: 480px)  {
		width: 100%;
		flex-direction: column;
		align-items: flex-start;
	}
}

.tribe-events-admin__ea-status-table td:nth-child(2){
	width: 45%;

	@media only screen and (max-width: 480px)  {
		width: 100%;
	}
}

.tribe-events-admin__ea-status-table td:nth-child(3){
	width: 30%;
	display: flex;
	justify-content: flex-end;

	@media only screen and (max-width: 480px)  {
		width: 100%;
		flex-direction: column;
	}
}

.tribe-events-admin__ea-status-table-dark{
	background-color: #f9f7f4;
}

.tribe-events-admin__ea-status-table td img {
	width: 21px;
	height: 21px;
	object-fit: contain;
	margin-right: 14px;

	@media only screen and (max-width: 480px) {
		margin: 10px 0;
	}
}

.tribe_events_page_tec-troubleshooting {
	background-color: #FFF;
}

#tribe-ticketing,
#tribe-community {
	display: none;
}
.tribe-events-admin__troubleshooting-notice {
	background-color: #161b7d;
	color: #fff;
	font-size: 16px;
	padding: 24px 0;
	line-height: 1;
	margin-left: -1.55vw;

	@media screen and (max-width: 480px) {
		margin-left: -20px;
	}
}

.tribe-events-admin__troubleshooting-notice_title {
	margin: 0 auto;
	max-width: 1024px;
	width: 90%;
	padding-left: 25px;

	@media screen and (max-width: 480px) {
		max-width: 90%;
	}
}
/* ... */

